# alog-extensions

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
headers/alog-extensions/: types-support.h
headers/alog-extensions/adapters/: qt_qml_adapter.h
headers/alog-extensions/sinks/: baical.h  console_qt.h  console_qt2.h
src/: types-support.cpp
src/adapters/: qt_qml_adapter.cpp
src/sinks/: baical.cpp  console_qt.cpp  console_qt2.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  alog_ext.cpp
tests/test/: test1_alog_ext.cpp
tests/test2/: CMakeLists.txt  test-alog-ext-2-main.cpp
